fix for site title left aligned with maximum width

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -149,6 +149,8 @@ section.header {
       line-height: 1.2em;
       padding: 20px 0;
       text-shadow: 2px 2px @md-primary-800-40;
+      text-align: left;
+      max-width:700px;
     }
     .site-subtitle {
       display: block;
